added unitOfWork (repository) pattern

--- a/StoreApp/StoreApp.csproj
+++ b/StoreApp/StoreApp.csproj
@@ -136,6 +136,11 @@
     <Compile Include="Controllers\ProductsController.cs" />
     <Compile Include="Controllers\ProductsDetailsController.cs" />
     <Compile Include="Controllers\StatisticsController.cs" />
+    <Compile Include="DAL\GenericRepository.cs" />
+    <Compile Include="DAL\IMaterialsRepository.cs" />
+    <Compile Include="DAL\MaterialsRepository.cs" />
+    <Compile Include="DAL\ProductDetailsRepository.cs" />
+    <Compile Include="DAL\UnitOfWork.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
