--- a/StoreApp/StoreApp.csproj
+++ b/StoreApp/StoreApp.csproj
@@ -137,9 +137,8 @@
     <Compile Include="Controllers\ProductsDetailsController.cs" />
     <Compile Include="Controllers\StatisticsController.cs" />
     <Compile Include="DAL\GenericRepository.cs" />
-    <Compile Include="DAL\IMaterialsRepository.cs" />
-    <Compile Include="DAL\MaterialsRepository.cs" />
     <Compile Include="DAL\ProductDetailsRepository.cs" />
+    <Compile Include="DAL\ProductsRepository.cs" />
     <Compile Include="DAL\UnitOfWork.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
