--- a/StoreApp/StoreApp.csproj
+++ b/StoreApp/StoreApp.csproj
@@ -190,6 +190,9 @@
       <DependentUpon>StoreModel.edmx</DependentUpon>
       <LastGenOutput>StoreModel.cs</LastGenOutput>
     </Content>
+    <Content Include="Scripts\angular-mocks.js" />
+    <Content Include="Scripts\angular.js" />
+    <Content Include="Scripts\angular.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <EntityDeploy Include="Models\StoreModel.edmx">
@@ -199,6 +202,7 @@
     <Content Include="Models\StoreModel.edmx.diagram">
       <DependentUpon>StoreModel.edmx</DependentUpon>
     </Content>
+    <Content Include="Scripts\angular.min.js.map" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -210,6 +214,7 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\statistics\statistics.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Views\Products\EditDetail.cshtml" />
     <Content Include="Web.config">
